tests/samples/block-switch-bad-breakpoint/error.txt
Unexpected block breakpoint "foo" on line 2 at index 14.

1|// error: unknown breakpoint in switch
2|{@switch x}{:foo}bar{/switch}
               ^
3|
